--- a/README
+++ b/README
@@ -1,17 +1,20 @@
-Welcome to Auto-Memory, a car trivia game where you try to remember details about<br> a variety different cars!<br>
+# Welcome to Auto-Memory
 
-### Play Now!
-Experience the game (URL)!<br>
+Welcome to Auto-Memory, a car trivia game where you try to remember details about
+a variety of different cars!
 
-### How to Play
-- Start the game by clicking on Load Car button.<br>
-- Enter your guess for the prompted car detail.<br>
-- Hit 'Enter' to submit and see if you were right!<br>
+## Play Now!
+Experience the game (URL).
 
-### Feedback
-Loved the game or have suggestions for improvement? Feel free to open an issue [here](link-to-issues) or submit a pull request!
+## How to Play
+- Start the game by clicking on the "Load Car" button.
+- Enter your guess for the prompted car detail.
+- Hit 'Enter' to submit and see if you were right!
 
-### Credits
+## Feedback
+Loved the game or have suggestions for improvement? Feel free to open an issue or submit a pull request!
+
+## Credits
 Developed by Yisroel Gugenheim.
 
-This project is licensed under the MIT License - see the LICENSE.md file for details.<br>
+This project is licensed under the MIT License - see the LICENSE.md file for details.
