--- a/README
+++ b/README
@@ -1,20 +1,20 @@
-# Welcome to Auto-Memory
+ Welcome to Auto-Memory
 
 Welcome to Auto-Memory, a car trivia game where you try to remember details about
 a variety of different cars!
 
-## Play Now!
+ Play Now!
 Experience the game (URL).
 
-## How to Play
+ How to Play
 - Start the game by clicking on the "Load Car" button.
 - Enter your guess for the prompted car detail.
 - Hit 'Enter' to submit and see if you were right!
 
-## Feedback
+ Feedback
 Loved the game or have suggestions for improvement? Feel free to open an issue or submit a pull request!
 
-## Credits
+ Credits
 Developed by Yisroel Gugenheim.
 
 This project is licensed under the MIT License - see the LICENSE.md file for details.
